src/objects/ATT_Jasper_API_REST_Services_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>AT&amp;T Control Center Cisco Jasper API REST web services provides a set of REST APIs that allow you to perform essential device lifecycle and SMS functions.</description>
    <fields>
        <fullName>API_Key__c</fullName>
        <description>Jasper Control Center API Key</description>
        <label>API Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <description>The Control Center REST API is securely available over HTTPS. You can use the following base URL for all API calls.</description>
        <label>Base URL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Account_Id__c</fullName>
        <description>Unique identifier for the account that owns the devices you&apos;re searching for.</description>
        <label>Enterprise Account Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>Jasper Control Center User Name.</description>
        <label>User Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>ATT_Jasper_API_REST_Services_Config</label>
</CustomObject>